--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.4",
     "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-devtools-extension": "^2.13.9",
     "web-vitals": "^2.1.4"
   },
