--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "13-02-2022",
+  "name": "webshop",
   "version": "0.1.0",
+  "homepage": "https://cndavi.github.io/webshop",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -26,6 +27,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -48,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
