--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webshop",
   "version": "0.1.0",
-  "homepage": "https://cndavi.github.io/webshop",
+  "homepage": "https://cndavi.github.io/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.7.1",
